# parachain-orml-template

./: Cargo.toml
integration-tests/emulated/chains/parachains/assets/asset-hub-rococo/: Cargo.toml
integration-tests/emulated/chains/parachains/assets/asset-hub-rococo/src/: lib.rs
integration-tests/emulated/chains/parachains/bridges/bridge-hub-rococo/: Cargo.toml
integration-tests/emulated/chains/parachains/testing/orml/: Cargo.toml
integration-tests/emulated/chains/parachains/testing/orml/src/: genesis.rs  lib.rs
integration-tests/emulated/chains/parachains/testing/penpal/: Cargo.toml
integration-tests/emulated/chains/parachains/testing/penpal/src/: lib.rs
integration-tests/emulated/chains/relays/rococo/: Cargo.toml
integration-tests/emulated/common/: Cargo.toml
integration-tests/emulated/networks/rococo-system/: Cargo.toml
integration-tests/emulated/networks/rococo-system/src/: lib.rs
integration-tests/emulated/tests/assets/asset-hub-rococo/: Cargo.toml
integration-tests/emulated/tests/bridges/bridge-hub-rococo/: Cargo.toml
integration-tests/emulated/tests/bridges/bridge-hub-rococo/src/: lib.rs
integration-tests/emulated/tests/bridges/bridge-hub-rococo/src/tests/: mod.rs  snowbridge.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
orml/currencies/: Cargo.toml
orml/currencies/src/: mock.rs
orml/tokens/: Cargo.toml
orml/tokens/runtime-api/: Cargo.toml
orml/tokens/src/: impls.rs  lib.rs  mock.rs
orml/traits/: Cargo.toml
orml/traits/src/: asset_registry.rs  xcm_transfer.rs
orml/utilities/: Cargo.toml
orml/utilities/src/: lib.rs
orml/xcm-support/: Cargo.toml
orml/xcm-support/src/: currency_adapter.rs  lib.rs  tests.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/currencies/: Cargo.toml
pallets/currencies/src/: lib.rs  mock.rs
pallets/template/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
