[package]
name = "orml-tokens-runtime-api"
version = "0.6.7"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"
license = "Apache-2.0"
description = "Runtime API module for orml-tokens."
repository = "https://github.com/open-web3-stack/open-runtime-module-library"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-runtime/std",
]
