[package]
name = "bridge-hub-rococo-emulated-chain"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Bridge Hub Rococo emulated chain"
publish = false

[lints]
workspace = true

[dependencies]
serde_json = "1.0.111"

# Substrate
sp-core = { path = "../../../../../../../polkadot-sdk/substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../../../../../../polkadot-sdk/substrate/primitives/runtime", default-features = false }
frame-support = { path = "../../../../../../../polkadot-sdk/substrate/frame/support", default-features = false }

# Polakadot
parachains-common = { path = "../../../../../../../polkadot-sdk/cumulus/parachains/common" }

# Cumulus
cumulus-primitives-core = { path = "../../../../../../../polkadot-sdk/cumulus/primitives/core", default-features = false }
emulated-integration-tests-common = { path = "../../../../common", default-features = false }
bridge-hub-rococo-runtime = { path = "../../../../../../../polkadot-sdk/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo" }
bridge-hub-common = { path = "../../../../../../../polkadot-sdk/cumulus/parachains/runtimes/bridge-hubs/common", default-features = false }

# Snowbridge
snowbridge-core = { path = "../../../../../../../parachain/primitives/core", default-features = false }
snowbridge-router-primitives = { path = "../../../../../../../parachain/primitives/router", default-features = false }
snowbridge-pallet-system = { path = "../../../../../../../parachain/pallets/system", default-features = false }
snowbridge-pallet-inbound-queue = { path = "../../../../../../../parachain/pallets/inbound-queue", default-features = false }
snowbridge-pallet-outbound-queue = { path = "../../../../../../../parachain/pallets/outbound-queue", default-features = false }
