[package]
name = "orml-emulated-chain"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "ORML emulated chain"
publish = false

[lints]
workspace = true

[dependencies]
serde_json = "1.0.111"

# Substrate
sp-core = { path = "../../../../../../../polkadot-sdk/substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../../../../../../polkadot-sdk/substrate/primitives/runtime", default-features = false }
frame-support = { path = "../../../../../../../polkadot-sdk/substrate/frame/support", default-features = false }

# Polakadot
parachains-common = { path = "../../../../../../../polkadot-sdk/cumulus/parachains/common" }

# Cumulus
cumulus-primitives-core = { path = "../../../../../../../polkadot-sdk/cumulus/primitives/core", default-features = false }
emulated-integration-tests-common = { path = "../../../../common", default-features = false }
parachain-orml-template-runtime = { path = "../../../../../../runtime" }
rococo-emulated-chain = { path = "../../../relays/rococo" }
